<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:contentDescription="@string/home_icon"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />
    <item
        android:id="@+id/community"
        android:icon="@drawable/baseline_groups_24"
        android:contentDescription="@string/community_icon"
        android:title="Community" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/baseline_add_circle_24"
        android:contentDescription="@string/add_icon"
        android:title="Add" />
    <item
        android:id="@+id/chats"
        android:icon="@drawable/baseline_message_24"
        android:contentDescription="@string/icon_chat"
        android:title="Chats" />
</menu>
