<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <!-- Wrap your existing ConstraintLayout inside NestedScrollView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.activity.SeeReplyActivity">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="Back"
                android:layout_marginBottom="10dp"
 />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/gost" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Username"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_post_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="2 hours ago"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_post_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:shapeAppearanceOverlay="@style/RoundedCorners" />
            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_gravity="start"
                app:cardBackgroundColor="#E91E63"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/community"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="Community"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tv_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="This is a sample post description. It can include text, links, and other elements."
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/like_btn"
                    android:button="@drawable/like_logic" />

                <TextView
                    android:id="@+id/tv_upvote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="100"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_comments"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/comments"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/baseline_comment_24" />

                <TextView
                    android:id="@+id/tv_comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="20 Comments"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tv_reply"
                    android:contentDescription="@string/reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="16sp"
                    android:text="Reply" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_200" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_rv"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/img_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Comments"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shemmer_post_layout" />

                <include layout="@layout/shemmer_post_layout" />

                <include layout="@layout/shemmer_post_layout" />

                <include layout="@layout/shemmer_post_layout" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
